--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -1,6 +1,7 @@
 <%- include('../partials/header') %>
 
   <body>
+    <h2>All Departing Flights</h2>
     <table id="list">
       <thead>
         <tr>
@@ -8,6 +9,7 @@
           <th>Airport</th>
           <th>Flight #</th>
           <th>Departs</th>
+          <th></th>
         </tr>
       </thead>
       <tbody>
@@ -17,6 +19,7 @@
             <td><%= f.airline %></td>
             <td><%= f.flightNo %></td>
             <td><%= f.departs %></td>
+            <td><a href="/flights/<%= f._id %>">DETAILS</a></td>
           </tr>
           <% }); %>
         </tbody>
