--- a/views/flights/details.ejs
+++ b/views/flights/details.ejs
@@ -41,7 +41,7 @@
     </tbody>
   </table>
 <% } else { %>
-  <h5>No Reviews Yet</h5>
+  <h5>No Flights Yet</h5>
 <% } %>
 
 <%- include('../partials/footer') %>
