--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -5,8 +5,8 @@
     <table id="list">
       <thead>
         <tr>
-          <th>Airline</th>
           <th>Airport</th>
+          <th>Airline</th>
           <th>Flight #</th>
           <th>Departs</th>
           <th></th>
@@ -15,7 +15,7 @@
       <tbody>
         <% flights.forEach(function(f) { %>
           <tr>
-            <td><%= f.airport %></td>
+            <td><strong><%= f.airport %></strong></td>
             <td><%= f.airline %></td>
             <td><%= f.flightNo %></td>
             <td><%= f.departs %></td>
