--- a/views/flights/tickets.ejs
+++ b/views/flights/tickets.ejs
@@ -6,7 +6,7 @@
     <h5>Seat Number:</h5>
     <input name="seat" required pattern="[A-F][1-9]\d?">
     <h5>Seat Price:</h5>
-<input type="number" min="0">
+<input type="number" min="0" name="price">
 <br><br>
 <button type="submit">Add Ticket</button>
 </form>
